[package]
name = "gpmf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.2"
rayon = "1.5.3"
time = {version = "0.3", features = ["formatting", "parsing"]}
walkdir = "2.3.2"
geojson = {version = "0.24", features = ["geo-types"]}
kml = "0.7.1"
mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
jpegiter = {git = "https://github.com/jenslar/jpegiter.git"}
blake3 = "1.3.3"
