[package]
name = "gpmf-rs"
version = "0.5.0"
edition = "2021"
description = "Extract, parse GoPro GPMF data from a GoPro MP4 file."
repository = "https://github.com/jenslar/gpmf-rs"
license = "MIT"
keywords = ["gopro", "gpmf", "telemetry", "gps", "sensor", "action camera"]

[dependencies]
rayon = "1.10"
time = {version = "0.3.37", features = ["formatting", "parsing", "macros"]}
walkdir = "2.5"
geojson = {version = "0.24", features = ["geo-types"]}
# mp4iter = {git = "https://github.com/jenslar/mp4iter.git"}
mp4iter = {path = "../mp4iter"}
jpegiter = {git = "https://github.com/jenslar/jpegiter.git"}
blake3 = "1.5.5"
binrw = "0.14.1"
indicatif = { version = "0.17.11", features = ["rayon"]}
